# arduino-alarm-clock

./: .gitignore  README.md
09 TFT Display/: ._test  main vanila.tmp  platformio.ini
09 TFT Display/include/: ._README
09 TFT Display/src/: calibrate.txt  display.h  main.cpp  pins.h
09 TFT Display/src/alarm/: alarm.cpp  alarm.h
09 TFT Display/src/led/: rgb_led.cpp  rgb_led.h
09 TFT Display/src/sound/: buzzer.h
09 TFT Display/src/sound/active_buzzer/: active_buzzer.cpp  active_buzzer.h
09 TFT Display/src/sound/passive_buzzer/: passive_buzzer.cpp  passive_buzzer.h
09 TFT Display/src/ui/: CMakeLists.txt  filelist.txt  time_getter.c  time_getter.h  ui.c  ui.h  ui_Alarm.c  ui_Splash.c  ui_TimeHumidity.c  ui_TimeSetup.c  ui_comp_hook.c  ui_events.h  ui_font_ClockDigits.c  ui_helpers.c  ui_helpers.h  ui_img_1386888695.c  ui_img_1_png.c  ui_img_2049616620.c  ui_img_687697873.c  ui_img_logo_png.c  ui_img_weather_1_png.c
09 TFT Display/src/ui/components/: ui_comp.c  ui_comp.h  ui_comp_alarm_comp.c  ui_comp_alarm_comp.h  ui_comp_clock_dot.c  ui_comp_clock_dot.h  ui_comp_hook.c  ui_comp_hook.h  ui_comp_scrolldots.c  ui_comp_scrolldots.h  ui_comp_small_label.c  ui_comp_small_label.h
09 TFT Display/src/ui/images/: ui_img_fon_png.c  ui_img_weather_1_png.c  ui_img_white_moved_sandclock_to_the_right_80_png.c
09 TFT Display/src/ui/screens/: ui_Alarm.c  ui_Clock.c  ui_Splash.c
09 TFT Display/src/ultrasonic/: ultrasonic.cpp  ultrasonic.h
09 TFT Display/test/: test.sll  test.spj
